fixed most things

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,7 @@ services:
             - source_secret
         links:
             - autodiscovery
-            - microservice_secret_database
+#            - microservice_secret_database
         expose:
             - 9000
         environment:
@@ -106,16 +106,16 @@ services:
             - 8083:80
             - 9093:9090
 
-    microservice_secret_database:
-        build: ./microservices/secret/database/
-        environment:
-            - CONSUL=autodiscovery
-            - MYSQL_ROOT_PASSWORD=mysecret
-            - MYSQL_DATABASE=finding_secrets
-            - MYSQL_USER=secret
-            - MYSQL_PASSWORD=mysecret
-        ports:
-            - 6666:3306
+#    microservice_secret_database:
+#        build: ./microservices/secret/database/
+#        environment:
+#            - CONSUL=autodiscovery
+#            - MYSQL_ROOT_PASSWORD=mysecret
+#            - MYSQL_DATABASE=finding_secrets
+#            - MYSQL_USER=secret
+#            - MYSQL_PASSWORD=mysecret
+#        ports:
+#            - 6666:3306
 
     ##
     # User Microservice
