added more learnings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,7 @@ services:
             - source_location
         links:
             - autodiscovery
+            - microservice_location_redis
         expose:
             - 9000
         environment:
@@ -76,6 +77,16 @@ services:
         ports:
             - 8082:80
             - 9092:9090
+
+    microservice_location_redis:
+        build: ./microservices/location/redis/
+        links:
+           - autodiscovery
+        expose:
+           - 6379
+        ports:
+           - 6380:6379
+
     ##
     # Secret Microservice
     ##
@@ -126,6 +137,8 @@ services:
             - source_user
         links:
             - autodiscovery
+            - microservice_secret_nginx
+            - microservice_user_redis
         expose:
             - 9000
         environment:
@@ -145,6 +158,15 @@ services:
         ports:
             - 8084:80
             - 9094:9090
+
+    microservice_user_redis:
+        build: ./microservices/user/redis/
+        links:
+           - autodiscovery
+        expose:
+           - 6379
+        ports:
+           - 6379:6379
     ##
     # Source containers
     ##
